[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cart_service"
version = "0.1"
description = "Cart Service example"
authors = [
    {name = "Hernán Bernal", email = "bernalhd18@gmail.com"}
]
license = {file = "LICENSE"}
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "grpcio-tools",
    "grpcio",
    "protobuf",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.scripts]
cart_service = "cart_service.app.infrastructure.grpc.server:serve"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM", "UP", "PYI"]

[tool.ruff.lint.per-file-ignores]
# E501: Line too long
# F401: Unused import
"cart_service/app/infrastructure/grpc/proto/*" = ["E501", "F401"]
